// Vitest Snapshot v1

exports[`Admin adminSampleEntities > No result - float seed 1`] = `
[
  [
    "adminEntitySearchTotalCount",
    SessionContextImpl {
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
      },
      "transaction": null,
      Symbol(SessionContext): undefined,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;

exports[`Admin adminSampleEntities > No result 1`] = `
[
  [
    "adminEntitySearchTotalCount",
    SessionContextImpl {
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
      },
      "transaction": null,
      Symbol(SessionContext): undefined,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;

exports[`Admin adminSampleEntities > One result 1`] = `
[
  [
    "adminEntitySampleEntities",
    SessionContextImpl {
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
      },
      "transaction": null,
      Symbol(SessionContext): undefined,
    },
    undefined,
    0,
    25,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
  [
    "adminEntitySearchTotalCount",
    SessionContextImpl {
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
      },
      "transaction": null,
      Symbol(SessionContext): undefined,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;
